--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     text-decoration: none;
     padding-left: 40%;
     padding-right: 40%;
+    text-align: center;
   }
   
   input[type="submit"]:hover {
