--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     font-weight: bolder;
     text-decoration: none;
     text-align: center;
+    font-size: 120%;
   }
   
   input[type="submit"]:hover {
